--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@ body {
 }
 .landing_grid__2 {
 	@apply grid gap-8;
-	grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+	grid-template-columns: repeat(auto-fill, 1fr);
 	grid-auto-rows: 250px;
 }
 .landing_grid__2 section {
@@ -26,7 +26,7 @@ body {
 	grid-auto-rows: 350px;
 }
 .landing_grid__3 section {
-	@apply rounded-xl border-2;
+	@apply rounded-xl border-2 border-[#efefef];
 }
 .landing_grid__4 {
 	@apply grid gap-16 max-w-screen-2xl mx-auto;
