added all pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+	font-family: 'Satoshi', sans-serif !important;
+}
+
 body {
 	@apply overflow-x-hidden;
 }
@@ -18,18 +22,46 @@ body {
 	grid-auto-rows: 250px;
 }
 .landing_grid__2 section {
-	@apply p-6 rounded-2xl;
+	@apply p-8 rounded-2xl;
+}
+.landing_grid__2 section:first-child {
+	@apply p-0;
 }
 .landing_grid__3 {
-	@apply grid gap-x-8 gap-y-16 justify-center;
-	grid-template-columns: repeat(auto-fill, minmax(285px, 1fr));
+	@apply grid gap-x-8 gap-y-16;
+	grid-template-columns: repeat(auto-fit, minmax(295px, 1fr));
 	grid-auto-rows: 350px;
 }
 .landing_grid__3 section {
 	@apply rounded-xl border-2 border-[#efefef];
 }
 .landing_grid__4 {
-	@apply grid gap-16 max-w-screen-2xl mx-auto;
+	@apply grid max-w-screen-xl mx-auto;
 	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	grid-auto-rows: 200px;
+}
+
+.number__grid {
+	@apply grid w-full justify-items-center;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.base-grid {
+	@apply grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.products__base {
+	@apply grid;
+	grid-template-columns: 300px auto;
+}
+
+.products__grid {
+	@apply grid gap-x-8 gap-y-5;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-auto-rows: 400px;
+}
+
+.products__grid section {
+	@apply border-2 rounded-2xl;
 }
