--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,7 +34,11 @@ body {
 
 	@apply grid gap-8;
 	grid-template-columns: repeat(auto-fill, 1fr);
-	grid-auto-rows: 250px;
+	grid-auto-rows: 35vh;
+
+	@screen md {
+		grid-auto-rows: 250px;
+	}
 
 	.banner_card {
 		@apply p-8 rounded-2xl;
@@ -105,7 +109,7 @@ body {
 .landing_grid__3 {
 	@include basePadding();
 	@apply grid gap-x-8 gap-y-16;
-	grid-template-columns: repeat(auto-fit, minmax(295px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 	grid-auto-rows: 350px;
 }
 .landing_grid__3 section {
