--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -33,7 +33,7 @@ body {
 .banner_grid {
 	@include basePadding();
 
-	@apply grid gap-8 max-w-screen-2xl mx-auto w-full;
+	@apply grid gap-8;
 	grid-template-columns: repeat(auto-fill, 1fr);
 	grid-auto-rows: 250px;
 
