--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,7 +8,7 @@
 		@apply px-10;
 	}
 	@screen xl {
-		@apply px-28;
+		@apply px-32;
 	}
 }
 
@@ -32,7 +32,6 @@ body {
 // banner grid
 .banner_grid {
 	@include basePadding();
-
 	@apply grid gap-8;
 	grid-template-columns: repeat(auto-fill, 1fr);
 	grid-auto-rows: 250px;
@@ -110,7 +109,7 @@ body {
 .landing_grid__3 {
 	@include basePadding();
 	@apply grid gap-x-8 gap-y-16;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
 	grid-auto-rows: 350px;
 }
 .landing_grid__3 section {
