--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,16 +32,16 @@
 // banner grid
 .banner_grid {
 	@include basePadding();
-	@apply grid gap-8;
+	@apply grid gap-10;
 	grid-template-columns: repeat(auto-fill, 1fr);
 	grid-auto-rows: 250px;
 
 	@screen xl {
-		grid-auto-rows: 32.5vh;
+		grid-auto-rows: 38.5vh;
 	}
 
 	.banner_card {
-		@apply p-8 rounded-2xl;
+		@apply p-10 md:p-14 rounded-2xl;
 		&:nth-of-type(1) {
 			@apply p-0;
 			grid-column: 1;
@@ -108,12 +108,20 @@
 
 .landing_grid__3 {
 	@include basePadding();
-	@apply grid gap-x-8 gap-y-16;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-	grid-auto-rows: 350px;
+	@apply grid gap-x-5 md:gap-x-10 gap-y-16 grid-cols-2 lg:grid-cols-3 xl:grid-cols-4;
+	grid-auto-rows: 65vw;
+	@screen md {
+		grid-auto-rows: 52.5vw;
+	}
+	@screen lg {
+		grid-auto-rows: 37.5vw;
+	}
+	@screen xl {
+		grid-auto-rows: 24vw;
+	}
 }
 .landing_grid__3 section {
-	@apply rounded-xl border-2 border-[#efefef];
+	@apply border-2 rounded-lg;
 }
 .landing_grid__4 {
 	@apply grid max-w-screen-xl mx-auto;
@@ -137,14 +145,22 @@
 .products__base {
 	@apply grid;
 	@screen lg {
-		grid-template-columns: 300px auto;
+		grid-template-columns: 250px auto;
 	}
 }
 
 .products__grid {
-	@apply grid gap-x-8 gap-y-5;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-	grid-auto-rows: 400px;
+	@apply grid gap-x-5 sm:gap-x-8 gap-y-5 grid-cols-2 lg:grid-cols-3 xl:grid-cols-4;
+	grid-auto-rows: 75vw;
+	@screen md {
+		grid-auto-rows: 57.5vw;
+	}
+	@screen lg {
+		grid-auto-rows: 33.5vw;
+	}
+	@screen xl {
+		grid-auto-rows: 23.5vw;
+	}
 }
 
 .products__grid section {
@@ -181,8 +197,8 @@
 }
 
 .last_brands_grid {
-	@apply grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	@apply grid gap-5;
+	grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 	@screen sm {
 		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 	}
